--- a/bcrs.html
+++ b/bcrs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 3</title>
+    <title>Case Study of Bob's Computer Repair Shop</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
+              src="./assets/jpeg/dan-drums.jpg"
               alt="Ram Maheshwari Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Dan Ross</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,16 +84,22 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 3</h1>
+        <h1 class="heading-primary">Bob's Computer Repair Shop</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            This page contains the case study of Bob's Computer Repair Shop
+            which includes the Project Overview, Tools Used and Live Link. This
+            was a final project for the full-stack web development program at
+            Bellevue University.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+          <a
+            href="https://bcrs-dr.herokuapp.com"
+            class="btn btn--bg"
+            target="_blank"
+            >Live Link</a
+          >
         </div>
       </div>
     </section>
@@ -102,8 +108,8 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
-              alt="Project Image"
+              src="./assets/jpeg/bcrs-mockup.jpg"
+              alt="Bob's Computer Repair Shop Image"
               class="project-details__showcase-img"
             />
           </div>
@@ -111,20 +117,33 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
+                Bob's Computer Repair Shop is an online retailer for computer repair parts and services. Bob's company specializes in password resets, spyware removal, RAM upgrades, software installation,
+                computer tune-up's, keyboard cleaning, and disk clean-up. Manufacturer prices are charged on all parts and a standard rate of $50.00 per hour is applied to any work outside of the specialized services. A breakdown of these services are as
+                follows:
               </p>
+              <ul>
+                <li>Password Reset: $39.99</li>
+                <li>Spyware Removal: $99.99</li>
+                <li>RAM Upgrade: $129.99</li>
+                <li>Software Installation: $49.99</li>
+                <li>Tune-up: $89.99</li>
+                <li>Keyboard Cleaning: $45.00</li>
+                <li>Disk Clean-up $149.99</li>
+              </ul>
+
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem?
+                Throughout this project, we studied the entire development process and created the following before starting on the main code of the project:
+              </p>
+
+              <ul>
+                <li>User Personas</li>
+                <li>Work Estimates</li>
+                <li>Wireframes</li>
+                <li>Prototypes</li>
+              </ul>
+
+              <p class="project-details__desc-para">
+                We also developed the project in sprints and had stand-up meetings twice a week. 
               </p>
             </div>
             <div class="project-details__tools-used">
@@ -133,27 +152,28 @@
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
-                <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
+                <div class="skills__skill">jQuery</div>
+                <div class="skills__skill">Angular</div>
+                <div class="skills__skill">Node.js</div>
+                <div class="skills__skill">MongoDb</div>
+                <div class="skills__skill">Express</div>
+                <div class="skills__skill">Typescript</div>
+                <div class="skills__skill">Angular Flex-Layout</div>
+                <div class="skills__skill">Angular Material</div>
+                <div class="skills__skill">Git and GitHub</div>
+                <div class="skills__skill">Heroku</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="#"
+                href="https://bcrs-dr.herokuapp.com"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
               <a
-                href="#"
+                href="https://github.com/dawross/bcrs-dr"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
@@ -171,57 +191,56 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/dan-ross-1a7004118">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/dawross">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
                   alt="icon"
                 />
-              </a>
+              </a> -->
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Dan Ross</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              Full stack developer from Iowa.
             </p>
           </div>
         </div>
 
+        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          &copy; Copyright 2022
+     <br>
+          <div class="credit">Credit to <a href="https://rammaheshwari.com" target="_blank">Ram Maheshwari</a> for the Dopefolio template.</div>
         </div>
       </div>
     </footer>
