--- a/jmc.html
+++ b/jmc.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Project 1</title>
+    <title>Case Study of Josephson Mfg.</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -22,12 +22,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="./assets/jpeg/dan-drums.jpg"
+              alt="Dan Ross Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">John Doe</span>
+          <span class="header__logo-sub">Dan Ross</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,16 +84,22 @@
     </header>
     <section class="project-cs-hero">
       <div class="project-cs-hero__content">
-        <h1 class="heading-primary">Project 1</h1>
+        <h1 class="heading-primary">Josephson Mfg.</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            in numquam incidunt earum quaerat cum fuga, atque similique natus
-            nobis sit.
+            This page contains the case study of Josephson Mfg. website which
+            includes the Project Overview, Tools Used and Live Links to the
+            official product. This project is still a work in progress and has
+            yet to be launched.
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+          <a
+            href="http://jmc-ng.s3-website.us-east-2.amazonaws.com/"
+            class="btn btn--bg"
+            target="_blank"
+            >Live Link</a
+          >
         </div>
       </div>
     </section>
@@ -102,8 +108,8 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/jpeg/project-mockup-example.jpeg"
-              alt="Project Image"
+              src="./assets/jpeg/jmc-mockup.jpg"
+              alt="JMC Screenshot"
               class="project-details__showcase-img"
             />
           </div>
@@ -111,21 +117,19 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
-                alias tenetur minus quaerat aliquid, aut provident blanditiis,
-                deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
-                mollitia laborum corrupti ullam rem. Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Neque alias tenetur minus quaerat
-                aliquid, aut provident blanditiis, deleniti aspernatur ipsam
-                eaque veniam voluptatem corporis vitae mollitia laborum corrupti
-                ullam rem?
+                The client needed a new website and wanted something simple and
+                easy to maintain. Currently, there are only 2 sections that they
+                needed to be dynamic, so I built a simple backend to add, edit,
+                and delete items for those sections. There is a simple login
+                page and once logged in, another menu will appear where they can
+                manage those listings. The project is uploaded to AWS using Elastic Beanstalk for the backend and S3 for the front end. 
               </p>
-              <p class="project-details__desc-para">
+              <!-- <p class="project-details__desc-para">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque
                 alias tenetur minus quaerat aliquid, aut provident blanditiis,
                 deleniti aspernatur ipsam eaque veniam voluptatem corporis vitae
                 mollitia laborum corrupti ullam rem?
-              </p>
+              </p> -->
             </div>
             <div class="project-details__tools-used">
               <h3 class="project-details__content-title">Tools Used</h3>
@@ -133,31 +137,32 @@
                 <div class="skills__skill">HTML</div>
                 <div class="skills__skill">CSS</div>
                 <div class="skills__skill">JavaScript</div>
-                <div class="skills__skill">React</div>
-                <div class="skills__skill">SASS</div>
-                <div class="skills__skill">GIT</div>
-                <div class="skills__skill">Shopify</div>
-                <div class="skills__skill">Wordpress</div>
-                <div class="skills__skill">Google ADS</div>
-                <div class="skills__skill">Facebook Ads</div>
-                <div class="skills__skill">Android</div>
-                <div class="skills__skill">IOS</div>
+                <div class="skills__skill">jQuery</div>
+                <div class="skills__skill">Angular</div>
+                <div class="skills__skill">Node.js</div>
+                <div class="skills__skill">MongoDb</div>
+                <div class="skills__skill">Express</div>
+                <div class="skills__skill">Typescript</div>
+                <div class="skills__skill">Nodemailer</div>
+                <div class="skills__skill">Bootstrap</div>
+                <div class="skills__skill">Git and GitHub</div>
+                <div class="skills__skill">AWS</div>
               </div>
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Live</h3>
               <a
-                href="#"
+                href="http://jmc-ng.s3-website.us-east-2.amazonaws.com/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
               >
-              <a
+              <!-- <a
                 href="#"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
                 target="_blank"
                 >Code Link</a
-              >
+              > -->
             </div>
           </div>
         </div>
@@ -171,57 +176,56 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/dan-ross-1a7004118">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/dawross">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
                   alt="icon"
                 />
-              </a>
+              </a> -->
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Dan Ross</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              Full stack developer from Iowa.
             </p>
           </div>
         </div>
 
+        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          &copy; Copyright 2022
+     <br>
+          <div class="credit">Credit to <a href="https://rammaheshwari.com" target="_blank">Ram Maheshwari</a> for the Dopefolio template.</div>
         </div>
       </div>
     </footer>
