added cds projects

--- a/bcrs.html
+++ b/bcrs.html
@@ -89,7 +89,7 @@
           <p class="text-primary">
             This page contains the case study of Bob's Computer Repair Shop
             which includes the Project Overview, Tools Used and Live Link. This
-            was a final project for the full-stack web development program at
+            was a final project for the full stack web development program at
             Bellevue University.
           </p>
         </div>
