--- a/index.html
+++ b/index.html
@@ -86,9 +86,7 @@
       <div class="home-hero__content">
         <h1 class="heading-primary">Hey, My name is Dan Ross</h1>
         <div class="home-hero__info">
-          <p class="text-primary">
-            I am a full stack web developer from Iowa. 
-          </p>
+          <p class="text-primary">I am a full stack web developer from Iowa.</p>
         </div>
         <div class="home-hero__cta">
           <a href="./#projects" class="btn btn--bg">Projects</a>
@@ -96,7 +94,11 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="https://www.linkedin.com/in/dan-ross-1a7004118" target="_blank" class="home-hero__social-icon-link">
+          <a
+            href="https://www.linkedin.com/in/dan-ross-1a7004118"
+            target="_blank"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -105,7 +107,11 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="https://github.com/dawross" target="_blank" class="home-hero__social-icon-link">
+          <a
+            href="https://github.com/dawross"
+            target="_blank"
+            class="home-hero__social-icon-link"
+          >
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -153,7 +159,10 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            I've recently finished a full-stack web development course which focused on technologies such as JavaScript, Angular, Node.js, NoSQL databases, DevOps, APIs, and a lot more. I just have a few electives to finish up and I will have my bachelor's degree!
+            I've recently finished a full stack web development course which
+            focused on technologies such as JavaScript, Angular, Node.js, NoSQL
+            databases, DevOps, APIs, and a lot more. I just have a few electives
+            to finish up and I will have my bachelor's degree!
           </span>
         </h2>
         <div class="about__content">
@@ -164,10 +173,14 @@
                 Hey! It's
                 <strong>Dan Ross</strong>
                 and I'm a <strong> Full-Stack Web Developer </strong> located in
-                Iowa. I've done many projects over the years and spent the last 9 years working in the magazine industry for companies like Hearst, Meredith, and Highlights. 
+                Iowa. I've done many projects over the years and spent the last
+                9 years working in the magazine industry for companies like
+                Hearst, Meredith, and Highlights.
               </p>
               <p class="about__content-details-para">
-                I've been working in the field for around 20 years, but I'm now looking to utilize my new full-stack skills utilizing the MEAN Stack (MongoDB, Express, Angular, and Node). 
+                I've been working in the field for around 20 years, but I'm now
+                looking to utilize my new full stack skills utilizing the MEAN
+                Stack (MongoDB, Express, Angular, and Node).
               </p>
             </div>
             <a href="#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -199,7 +212,8 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-           Here are some of the projects I've done over the years through school, work, and freelancing. 
+            Here are some of the projects I've done over the years through
+            school, work, and freelancing.
           </span>
         </h2>
 
@@ -214,9 +228,10 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Josephson Mfg. </h3>
+              <h3 class="projects__row-content-title">Josephson Mfg.</h3>
               <p class="projects__row-content-desc">
-                This website is for a radiator manufacturing company located in Fort Dodge, IA. At this time, it is still a work in progress. 
+                This website is for a radiator manufacturing company located in
+                Fort Dodge, IA. At this time, it is still a work in progress.
               </p>
               <a
                 href="./jmc.html"
@@ -236,9 +251,12 @@
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Bob's Computer Repair Shop</h3>
+              <h3 class="projects__row-content-title">
+                Bob's Computer Repair Shop
+              </h3>
               <p class="projects__row-content-desc">
-                Bob's Computer Repair Shop was a final team project at Bellevue University. It was built using the MEAN stack. 
+                Bob's Computer Repair Shop was a final team project at Bellevue
+                University. It was built using the MEAN stack.
               </p>
               <a
                 href="./bcrs.html"
@@ -260,7 +278,8 @@
             <div class="projects__row-content">
               <h3 class="projects__row-content-title">Nodebucket</h3>
               <p class="projects__row-content-desc">
-               Nodebucket was a final project at Bellevue University. It was built using the MEAN stack. 
+                Nodebucket was a final project at Bellevue University. It was
+                built using the MEAN stack.
               </p>
               <a
                 href="./nodebucket.html"
@@ -273,16 +292,82 @@
         </div>
       </div>
     </section>
+
+    <!-- FROM CDS GLOBAL  -->
+    <section class="sec-pad">
+      <div class="main-container">
+        <h2 class="heading heading-sec heading-sec__mb-bg">
+          <span class="heading-sec__main"
+            >From my Employment at CDS Global</span
+          >
+          <span class="heading-sec__sub">
+            Here are some of the page I worked on while working at CDS Global. I
+            worked there for almost 9 years and did countless pages, but these
+            are a few I did soon before I left.
+          </span>
+        </h2>
+
+        <div class="projects__row">
+          <div class="projects__row-img-content">
+            <img
+              class="projects__row-img"
+              src="./assets/jpeg/tx-mnthly.jpg"
+              loading="lazy"
+              alt="Texas Monthly"
+            />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Texas Monthly</h3>
+
+            <div class="projects__row-content-desc">
+              The design for Texas Monthly was provided to me in a Figma file. I
+              converted it to HTML, CSS, and jQuery. I also added the necessary
+              code to make it functional with our proprietary order management
+              software.
+            </div>
+            <a href="https://subscription.texasmonthly.com/servlet/OrdersGateway?cds_mag_code=TXP&cds_page_id=261743" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Live Link</a>
+          </div>
+        </div>
+
+        <div class="projects__row">
+          <div class="projects__row-img-content">
+            <img
+              class="projects__row-img"
+              src="./assets/jpeg/wne-spct.jpg"
+              loading="lazy"
+              alt="Wine Spectator"
+            />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">Wine Spectator</h3>
+
+            <div class="projects__row-content-desc">
+              The design for Wine Spectator was provided to me in a Figma file. I
+              converted it to HTML, CSS, and jQuery. I also added the necessary
+              code to make it functional with our proprietary order management
+              software.
+            </div>
+            <a href="https://www.winespectator.com/subscribe" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Live Link</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="contact" class="contact sec-pad dynamicBg">
       <div class="main-container">
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
-            Feel free to Contact me by submitting the form below and I will get back to you as soon as possible 
+            Feel free to Contact me by submitting the form below and I will get
+            back to you as soon as possible
           </span>
         </h2>
         <div class="contact__form-container">
-          <form action="https://formspree.io/f/mgedjzaa" class="contact__form" method="POST">
+          <form
+            action="https://formspree.io/f/mgedjzaa"
+            class="contact__form"
+            method="POST"
+          >
             <div class="contact__form-field">
               <label class="contact__form-label" for="name">Name</label>
               <input
@@ -332,14 +417,22 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/dan-ross-1a7004118">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://www.linkedin.com/in/dan-ross-1a7004118"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="https://github.com/dawross">
+              <a
+                target="_blank"
+                rel="noreferrer"
+                href="https://github.com/dawross"
+              >
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
@@ -380,8 +473,14 @@
         <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
         <div class="main-footer__lower">
           &copy; Copyright 2022
-     <br>
-          <div class="credit">Credit to <a href="https://rammaheshwari.com" target="_blank">Ram Maheshwari</a> for the Dopefolio template.</div>
+          <br />
+          <div class="credit">
+            Credit to
+            <a href="https://rammaheshwari.com" target="_blank"
+              >Ram Maheshwari</a
+            >
+            for the Dopefolio template.
+          </div>
         </div>
       </div>
     </footer>
