--- a/nodebucket.html
+++ b/nodebucket.html
@@ -87,7 +87,7 @@
         <h1 class="heading-primary">Nodebucket</h1>
         <div class="project-cs-hero__info">
           <p class="text-primary">
-            This page contains the case study of Nodebucket which includes the Project Overview, Tools Used and Live Link. This was a final project for the full-stack web development program at Bellevue University.
+            This page contains the case study of Nodebucket which includes the Project Overview, Tools Used and Live Link. This was a final project for the full stack web development program at Bellevue University.
           </p>
         </div>
         <div class="project-cs-hero__cta">
@@ -109,7 +109,7 @@
             <div class="project-details__desc">
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
-                Nodebucket is a software for task management designed to streamline the way you create, track, edit, and delete time-sensitive information.This application was built using the MEAN stack (MongoDB, Express, Angular, and Node.js). The interface is designed using Angular Material and Flex-layout. This was also a project for the full-stack development course at Bellevue University. 
+                Nodebucket is a software for task management designed to streamline the way you create, track, edit, and delete time-sensitive information.This application was built using the MEAN stack (MongoDB, Express, Angular, and Node.js). The interface is designed using Angular Material and Flex-layout. This was also a project for the full stack development course at Bellevue University. 
               </p>
               <p class="project-details__desc-para">
                 Throughout this project, we studied the entire development process and created the following before starting on the main code of the project:
